--- a/public/screen.css
+++ b/public/screen.css
@@ -1,40 +1,68 @@
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
-html {
-
-}
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">html {}
 
 body {
-  background-image: url("images/space.png");
-  background-position: center center;
-  background-repeat:  no-repeat;
-  background-attachment: fixed;
-  background-size:  cover;
-  background-color: #4b4a4a;
-  margin: 0;
-  padding: 0;
-  font: 16px / 1;
-  font-family: 'Roboto', sans-serif;
+    background-image: url("images/space.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #4b4a4a;
+    margin: 0;
+    padding: 0;
+    font: 16px / 1;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1 {
-  color: transparent;
+    color: transparent;
 }
 
+header {
+    width: 100%;
+    height: 420px;
+    display: flex;
+    align-items: center;
+    flex-flow: column;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+.profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 280px;
+}
+
+.me {
+    margin-left: auto;
+}
+
+.about-me {
+    background-color: LightGrey;
+    padding: 5px;
+    border-radius: 4px;
+    margin-left: 20px;
+    margin-right: auto;
+    opacity: 0.8;
+    justify-content: center;
+    margin-bottom: 100px;
+}
 
 .small {
-  background-color: rgba(23, 34, 27, 0.6) ;
-  padding: 10px;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+    background-color: rgba(23, 34, 27, 0.6);
+    padding: 10px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-
 .small-pic {
-  display: inline-block;
-  margin: 5px 10px 5px 10px;
+    display: inline-block;
+    margin: 5px 10px 5px 10px;
 }
