--- a/public/screen.css
+++ b/public/screen.css
@@ -52,6 +52,26 @@ header {
     margin-bottom: 100px;
 }
 
+.tri {
+  position: relative;
+  top: -100px;
+  left: 30px;
+  opacity: 0.7;
+}
+
+/*.about-me::after {
+    display: block;
+    height: 0;
+    width: 0;
+    /*border: 8px solid transparent;*/
+    /*border-top-color: #cacaca;
+    position: absolute;
+    right: 2px;
+    top: 0;
+    margin-top: 0;
+    padding-top: 0;
+}*/
+
 .small {
     background-color: rgba(23, 34, 27, 0.6);
     padding: 10px;
@@ -65,4 +85,12 @@ header {
 .small-pic {
     display: inline-block;
     margin: 5px 10px 5px 10px;
+}
+
+.connected {
+
+}
+
+footer {
+
 }
