--- a/public/screen.css
+++ b/public/screen.css
@@ -19,13 +19,14 @@ h1 {
 
 header {
     width: 100%;
-    height: 420px;
+    height: 400px;
     display: flex;
     align-items: center;
     flex-flow: column;
     justify-content: space-between;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 100px;
 }
 
 .profile {
@@ -38,39 +39,39 @@ header {
 }
 
 .me {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    width: 250px;
+    height: 250px;
+    margin-top: auto;
+    border: transparent 1px;
+    border-radius:10px;
+}
+
+.me img {
+    /*width: 250px;*/
     margin-left: auto;
+    position: relative;
 }
 
 .about-me {
-    background-color: LightGrey;
-    padding: 5px;
+    background-color: #fff;
+    padding: 5px 25px 10px 25px;
     border-radius: 4px;
     margin-left: 20px;
     margin-right: auto;
-    opacity: 0.8;
+    opacity: 0.7;
     justify-content: center;
     margin-bottom: 100px;
 }
 
 .tri {
-  position: relative;
-  top: -100px;
-  left: 30px;
-  opacity: 0.7;
+    position: relative;
+    top: -100px;
+    left: 30px;
+    opacity: 0.7;
 }
-
-/*.about-me::after {
-    display: block;
-    height: 0;
-    width: 0;
-    /*border: 8px solid transparent;*/
-    /*border-top-color: #cacaca;
-    position: absolute;
-    right: 2px;
-    top: 0;
-    margin-top: 0;
-    padding-top: 0;
-}*/
 
 .small {
     background-color: rgba(23, 34, 27, 0.6);
@@ -88,9 +89,23 @@ header {
 }
 
 .connected {
+  display: flex;
+  justify-content: space-around;
+  margin:auto, auto, 30px, auto;
+}
 
+.stay {
+  text-align:center;
+  font-weight: bold;
+  font-size: 20px;
+  color: #fff;
 }
 
 footer {
+  text-align: center;
+  color: #fff;
+}
 
+.heart {
+  color: red;
 }
