--- a/public/screen.css
+++ b/public/screen.css
@@ -29,6 +29,12 @@ header {
     margin-top: 100px;
 }
 
+.main {
+    max-width: 860px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .profile {
     display: flex;
     justify-content: center;
@@ -46,7 +52,7 @@ header {
     height: 250px;
     margin-top: auto;
     border: transparent 1px;
-    border-radius:10px;
+    border-radius: 10px;
 }
 
 .me img {
@@ -88,24 +94,146 @@ header {
     margin: 5px 10px 5px 10px;
 }
 
+.seperator {
+    background-color: rgb(1, 15, 26);
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+    padding-top: 5px;
+}
+
+.large {
+    align-items: center;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    /*margin-left: 10px;*/
+    /*margin-right: 10px;*/
+    margin: 30px;
+    flex: 1;
+}
+
+.react-pic {
+    position: relative;
+    width: 860px;
+    height: 80px;
+    overflow: hidden;
+    border: 0px transparent solid;
+    border-radius: 10px 10px 0px 0px;
+}
+
+#react-pic {
+    position: absolute;
+    top: -255%;
+}
+
+.react-text {
+    background-color: #fff;
+    border: 0px transparent solid;
+    overflow: hidden;
+    border-radius: 0px 0px 10px 10px;
+    width: 860px;
+}
+
+.react-header {
+    display: flex;
+    align-items: center;
+    margin: 0px 15px 0px 15px;
+}
+
+div.react-header p {
+    margin-left: 15px;
+}
+
+.react-info {
+    margin: 0px 15px 35px 15px;
+}
+
+.code {
+    position: relative;
+    width: 860px;
+    height: 80px;
+    overflow: hidden;
+    border: 1px transparent solid;
+    border-radius: 10px 10px 0px 0px;
+    /*margin-bottom: 0px;*/
+}
+
+#code {
+    position: absolute;
+    top: -255%;
+}
+
+.fizz-text {
+    background-color: #fff;
+    border: 0px transparent solid;
+    overflow: hidden;
+    border-radius: 0px 0px 10px 10px;
+    width: 860px;
+}
+
+.fizz-header {
+    display: flex;
+    align-items: center;
+    margin: 0px 15px 0px 15px;
+}
+
+div.fizz-header p {
+    margin-left: 15px;
+}
+
+.fizz-info {
+    margin: 0px 15px 35px 15px;
+}
+
+.blue-box {
+  position:relative;
+  right:0px;
+  top:0px;
+  width: 125px;
+}
+
+.blue-box h3 {
+  border-radius: 5px;
+  background-color: blue;
+  color: #fff;
+  text-align: center;
+  padding: 2px;
+}
+
 .connected {
-  display: flex;
-  justify-content: space-around;
-  margin:auto, auto, 30px, auto;
+    display: flex;
+    justify-content: space-around;
+    margin: auto, auto, 50px, auto;
 }
 
 .stay {
-  text-align:center;
-  font-weight: bold;
-  font-size: 20px;
-  color: #fff;
+    text-align: center;
+    font-weight: bold;
+    font-size: 25px;
+    color: #fff;
 }
 
 footer {
-  text-align: center;
-  color: #fff;
+    background-color: rgb(1, 15, 26);
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: #fff;
+    margin: 0;
+
+}
+
+footer p {
+  margin-top: 0;
 }
 
 .heart {
-  color: red;
+    color: red;
+}
+
+.tweet img {
+    margin-left: 8px;
+    margin-right: 8px;
+    margin-bottom: 30px;
 }
