--- a/public/screen.css
+++ b/public/screen.css
@@ -26,6 +26,20 @@ h2 {
     margin: 0px;
 }
 
+.profile {
+  animation-name: fadein;
+  animation-duration: 3s;
+}
+
+@keyframes fadein {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+.fadein {
+
+}
+
 .hello {
     background-color: #fff;
     position: absolute;
@@ -198,6 +212,11 @@ footer p {
 @media only screen and (max-width: 710px) {
     body {
         background-position: left -250px top 0px;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        margin: 0;
+        padding: 0;
     }
     .slider {}
     .second {
