--- a/public/screen.css
+++ b/public/screen.css
@@ -1,5 +1,3 @@
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">html {}
-
 body {
     background-image: url("images/Ryan-2.jpg");
     background-position: center;
@@ -27,17 +25,17 @@ h2 {
 }
 
 .profile {
-  animation-name: fadein;
-  animation-duration: 3s;
+    animation-name: fadein;
+    animation-duration: 2s;
 }
 
 @keyframes fadein {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
-}
-
-.fadein {
-
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .hello {
@@ -92,13 +90,12 @@ h2 {
     width: 90%;
     border: 1px transparent solid;
     border-radius: 5px;
+    opacity: 1;
 }
 
 .projects img:hover {
     border: 1px #fff solid;
 }
-
-.projects img::after {}
 
 .third {
     margin: 40px 20px 0px 20px;
@@ -112,6 +109,7 @@ h2 {
     background-attachment: fixed;
     background-size: cover;
     /*height: 800px;*/
+    padding-bottom: 150px;
 }
 
 .skills {
@@ -127,9 +125,12 @@ h2 {
 }
 
 .wordpress {
+    background-color: #fff;
+    border-radius: 45px;
+    opacity: 0.8;
     width: 90%;
-    margin: 0 auto 0 auto;
-    padding-bottom: 50px;
+    margin: 40px auto 0 auto;
+    padding: 15px;
 }
 
 .slider-2 p {
@@ -150,7 +151,7 @@ h2 {
     position: absolute;
     padding: 5px 25px 10px 25px;
     border-radius: 4px;
-    margin-top: 60px;
+    margin-top: 130px;
     margin-right: auto;
     margin-bottom: 10px;
     margin-left: 0px;
@@ -166,29 +167,88 @@ h2 {
 }
 
 .icons {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  margin:auto;
-  padding-bottom: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: auto auto 150px auto;
+    padding: 40px 10px 40px 10px;
 }
 
 .social {
-  display: inline-block;
+    display: inline-block;
     margin: 5px 10px 5px 10px;
     width: 15%;
 }
 
 .social img:hover {
-  opacity: 0.8;
+    opacity: 0.7;
 }
 
 .social img:active {
-  opacity: 0.8;
+    opacity: 0.8;
 }
 
+.slider-4 {
+    background-image: url("images/design-ideas/internet.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: rgb(0, 0, 10);
+    /*height: 800px;*/
+    margin: 0;
+    padding: 0px 0px 50px 0px;
+    font: 16px / 1;
+    font-family:  'Baloo Bhaina', cursive;
+}
 
+.blog-header {
+  text-align: center;
+  padding-top: 50px;
+  font-size: 40px;
+  color: #fff;
+}
+
+.blog-header h3 {
+  margin-bottom: 0px;
+}
+
+.blog-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.blog {
+  background-image: url("images/blogging.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  width:80%;
+  height:500px;
+  background-color: #eee;
+  /*opacity: 0.9;*/
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border: 0px transparent solid;
+  border-radius: 10px;
+}
+
+.medium {
+  display: flex;
+  justify-content: center;
+  margin-left: 40%;
+  margin-right: auto;
+  margin-top: 15%;
+}
+
+.blog p {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 50px;
+}
 
 footer {
     background-color: #272827;
@@ -198,11 +258,11 @@ footer {
     text-align: center;
     color: #fff;
     margin: 0;
-
+    padding-top: 10px;
 }
 
 footer p {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 .heart {
