--- a/public/screen.css
+++ b/public/screen.css
@@ -205,12 +205,20 @@ h2 {
 .blog-header {
   text-align: center;
   padding-top: 50px;
-  font-size: 40px;
+  font-size: 50px;
   color: #fff;
+  align-items: center;
 }
 
 .blog-header h3 {
   margin-bottom: 0px;
+  background-color: #272827;
+  border: 0px transparent solid;
+  border-radius: 5px;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  opacity: 0.9;
 }
 
 .blog-body {
