blog background update

--- a/public/screen.css
+++ b/public/screen.css
@@ -189,7 +189,7 @@ h2 {
 }
 
 .slider-4 {
-    background-image: url("images/design-ideas/internet.jpg");
+    background-image: url("images/skyline.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
