made a few changes and need to update github

--- a/public/screen.css
+++ b/public/screen.css
@@ -58,7 +58,7 @@ h2 {
     left: 0px;
 }
 
-.slider {
+.slider-1 {
     background-color: #272827;
     color: #fff;
     opacity: 0.9;
@@ -100,6 +100,18 @@ h2 {
 .third {
     margin: 40px 20px 0px 20px;
     padding-bottom: 20px;
+}
+
+.bar {
+    width: 100%;
+    height: 40px;
+    background-color: #fff;
+}
+
+.bar-2 {
+    width: 100%;
+    height: 40px;
+    background-color: #000;
 }
 
 .slider-2 {
@@ -231,7 +243,7 @@ h2 {
   background-image: url("images/blogging.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
   background-size: cover;
   width:80%;
   height:500px;
@@ -273,10 +285,6 @@ footer p {
     margin-top: 0;
 }
 
-.heart {
-    color: red;
-}
-
 @media only screen and (max-width: 710px) {
     body {
         background-position: left -250px top 0px;
@@ -286,10 +294,11 @@ footer p {
         margin: 0;
         padding: 0;
     }
-    .slider {}
+
     .second {
         display: block;
     }
+
     .second img {
         margin-top: 50px;
     }
